# py_vdes1000

./: .gitignore  README.md  pyproject.toml
examples/: messages.yaml  minimal_tx.py  vdes_rx_app.py  vdes_trx_1.yaml  vdes_trx_2.yaml  vdes_tx_app.py
src/vdes1000/: sentences.py  trx.py  udp.py  utils.py
tests/: test_sentences.py  test_trx.py
