[project]
name = "vdes1000"
version = "0.1.0"
description = "A Python package to facilitate communication with the CML Microcircuits VDES1000 transceiver."
authors = [
    {name = "Jan Safar", email = "jan.safar@gla-rad.org"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "bitstring>=4.1.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
spyder = [
    "spyder-kernels==2.5.*",
]
dev = [
    "-e file:///${PROJECT_ROOT}/../py_rec_itu_r_m_1371#egg=rec-itu-r-m-1371",
    "-e file:///${PROJECT_ROOT}/../py_iec_61162#egg=iec-61162",
    "-e file:///${PROJECT_ROOT}/../py_iec_pas_63343#egg=iec-pas-63343",
    "-e file:///${PROJECT_ROOT}/../py_iec_62320#egg=iec-62320",
]
